<resources>
    <string name="app_name">麦颂</string>
    <string name="press_back_again_to_exit">再按一次退出程序</string>
    <string name="service_platform">服务平台</string>
    <string name="messages">消息</string>
    <string name="self_detail">我的</string>
    <string name="crews">剧组</string>
    <string name="input_tel_no">请输入手机号码</string>
    <string name="login">登录</string>
    <string name="input_check_code">请输入验证码</string>
    <string name="get_check_code">获得验证码</string>
    <string name="skip_wait">跳过    %dS</string>
    <string name="myinfo">个人资料</string>
    <string name="myfriends">我的好友</string>
    <string name="help">帮助</string>
    <string name="settings">设置</string>
    <string name="create_crew">创建剧组</string>
    <string name="join_crew">加入剧组</string>
    <string name="notifycation_of_crew">剧组通知</string>
    <string name="call_sheet">每日通告单</string>
    <string name="script_update">剧本扉页</string>
    <string name="shooting_schedule">拍摄大计划</string>
    <string name="contact_list_crew">剧组通讯录</string>
    <string name="profile">我在本组</string>
    <string name="sunriseTime">日出</string>
    <string name="sunsetTime">日落</string>
    <string name="tempature_format" formatted="false">%.0f/%.0f°</string>
    <string name="clear_day">晴</string>
    <string name="clear_night">晴</string>
    <string name="rain">雨</string>
    <string name="snow">雪</string>
    <string name="sleet">雨夹雪</string>
    <string name="wind">风</string>
    <string name="fog">雾</string>
    <string name="cloudy">多云</string>
    <string name="partly_cloudy_day">晴转多云</string>
    <string name="partly_cloudy_night">晴转多云</string>
    <string name="hail">冰雹</string>
    <string name="thunderstorm">雷雨</string>
    <string name="tornado">龙卷风</string>
    <string name="commit">确定</string>
    <string name="cancel">取消</string>
    <string name="add_text">添加备忘</string>
    <string name="check_text">  查  看  </string>
    <string name="did_not_select_date">您还未选择创建备忘的日期！</string>
    <string name="search">搜索</string>
    <string name="no_search_content">没有搜索到相关剧组</string>
    <string name="create_crew_name">剧名</string>
    <string name="pls_input_crew_name">请输入剧名</string>
    <string name="product_name">出品方</string>
    <string name="optional_within_30word">选填30字以内</string>
    <string name="recipeName">制作方</string>
    <string name="start_date">拍摄开始</string>
    <string name="end_date">拍摄结束</string>
    <string name="crew_pwd">进组密码</string>
    <string name="director">导演</string>
    <string name="between_6_12">6-12位数字及大小写字母</string>
    <string name="build_crew">建立剧组</string>
    <string name="perfect_data">完善个人资料</string>
    <string name="nikename_or_username">姓名/艺名</string>
    <string name="sex_boy">男</string>
    <string name="sex_girl">女</string>
    <string name="submit">提交</string>
    <string name="apply_join">申请加入</string>
    <string name="director1">导  演</string>
    <string name="madeData">制作时间</string>
    <string name="has_no_readed">未读</string>
    <string name="has_readed"  >已读</string>
    <string name="withdraw">撤 回</string>
    <string name="calls_release_date" formatted="false">发布日期：%s</string>
    <string name="no_read_count" formatted="false">%d人未读</string>
    <string name="crewName">剧组名称</string>
    <string name="modify">修改</string>
    <string name="tel_in_crew">我在本组的手机号码</string>
    <string name="not_show">不显示</string>
    <string name="my_department">我的部门</string>
    <string name="my_nikename">我的姓名</string>
    <string name="my_position">我的职位</string>
    <string name="optional">选填</string>
    <string name="quite_crew">退出剧组</string>
    <string name="only_manager_change">仅限管理员更改</string>
    <string name="release">发布</string>
    <string name="pls_input">请输入...</string>
    <string name="pls_input_title">请输入标题...</string>
    <string name="pls_input_content">请输入内容...</string>
    <string name="user_cancel">用户取消</string>
    <string name="memoire">备忘录</string>
    <string name="search_memoire">搜索备忘录</string>
    <string name="version_info">版本信息</string>
    <string name="version_code">V1.0.0</string>
    <string name="clear_cache">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="save_intent">保存</string>
    <string name="my_headicon">我的头像</string>
    <string name="sex">性别</string>
    <string name="wechat_name">微信号</string>
    <string name="email">邮箱</string>
    <string name="my_tel">手机号</string>
    <string name="friend_detail">好友详情</string>
    <string name="send_msg">发送消息</string>
    <string name="information">联系方式</string>
    <string name="department">所在部门</string>
    <string name="position">担任职位</string>
    <string name="height_of_contact">身高</string>
    <string name="weight_of_contact">体重</string>
    <string name="sex_of_contact_girl">girl</string>
    <string name="add_to_friend">添加好友</string>
    <string name="his_info">Ta的资料</string>
    <string name="seconds_later"  formatted="false">%dS后重发</string>
    <string name="crew_name_not_null">剧组名不能为空！</string>
    <string name="crew_pwd_not_null">剧组密码不能为空！</string>
    <string name="crew_director_not_null">导演不能为空！</string>
    <string name="crew_start_time_not_null">开始时间不能为空！</string>
    <string name="crew_end_time_not_null">结束时间不能为空！</string>
    <string name="makinger">制片</string>
    <string name="no_check_crew">您没有选中任何剧组！</string>
    <string name="group_id_is_null">剧组id获取失败</string>
    <string name="save_success">保存成功！</string>
    <string name="six_12_pwd">6-12位数字密码</string>
    <string name="department_">部门</string>
    <string name="pls_choose_department">请选择部门</string>
    <string name="position_">职位</string>
    <string name="pls_choose_position">请选择职位</string>
    <string name="in_crew">进组</string>
    <string name="user_phone_null">用户账号信息获取失败！</string>
    <string name="crew_id_null">剧组信息获取失败！</string>
    <string name="apply_notice_success">发布成功！</string>
    <string name="pls_select_date">请选择日期</string>
    <string name="startdate_before_enddate">结束日期不能早于或等于开始日期！</string>
    <string name="frd_apply_info">好友验证消息</string>
    <string name="accept">同意</string>
    <string name="declined">拒绝</string>
    <string name="accepted">已同意</string>
    <string name="declineded">已拒绝</string>
    <string name="say_something">说点什么吧</string>
    <string name="we_ware_friend">我们已经是好友了</string>
    <string name="not_downloaded">未下载</string>
    <string name="has_downloaded">已下载</string>
    <string name="download_faild">下载失败</string>
    <string name="file_not_found">文件未找到</string>
    <string name="not_support_file_format">不支持的文件格式！</string>
    <string name="out_crew_success">退出剧组成功！</string>
    <string name="upload_faild">图片上传失败！</string>
    <string name="select_email_app">选择您的邮箱程序</string>
    <string name="no_memoire_today">今日无备忘</string>
    <string name="beking">北京</string>
    <string name="weather_got_faild">天气信息获取失败</string>

</resources>
