<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingTop="25dp"
        >
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@mipmap/icon_back"
            />
        <TextView
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="@string/create_crew"
            android:gravity="center"
            android:textColor="@color/main_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/subline"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/crewNameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        >
        <TextView
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/create_crew_name"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            android:layout_weight="3"
            android:id="@+id/ed_crewName"
            android:textColorHint="@color/hint_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:background="@null"
            android:hint="@string/pls_input_crew_name"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/subline"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />

    <LinearLayout
        android:id="@+id/productNameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        >
        <TextView
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/product_name"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            android:layout_weight="3"
            android:id="@+id/ed_productName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="17sp"
            android:maxLength="60"
            android:ellipsize="end"
            android:textColorHint="@color/hint_text"
            android:hint="@string/optional_within_30word"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/subline"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />

    <LinearLayout
        android:id="@+id/recipeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        >
        <TextView
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/recipeName"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            android:layout_weight="3"
            android:id="@+id/ed_recipeName"
            android:layout_width="0dp"
            android:textSize="17sp"
            android:layout_height="match_parent"
            android:hint="@string/optional_within_30word"
            android:textColorHint="@color/hint_text"
            android:background="@null"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/subline"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />

    <LinearLayout
        android:id="@+id/directorLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        >
        <TextView
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/director"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            android:layout_weight="3"
            android:id="@+id/ed_directorName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/optional_within_30word"
            android:textColorHint="@color/hint_text"
            android:textSize="17sp"
            android:background="@null"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/subline"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />

    <LinearLayout
        android:id="@+id/startDateLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        >
        <TextView
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/start_date"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            />

        <EditText
            android:layout_weight="3"
            android:id="@+id/ed_startDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:background="@null"
            android:hint="@string/pls_input_crew_name"
            android:textColorHint="@color/hint_text"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/subline"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />

    <LinearLayout
        android:id="@+id/endDateLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        >
        <TextView
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/end_date"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            android:layout_weight="3"
            android:id="@+id/ed_endDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:background="@null"
            android:hint="@string/pls_input_crew_name"
            android:textColorHint="@color/hint_text"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/subline"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />

    <LinearLayout
        android:id="@+id/crewPwdLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        >
        <TextView
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/crew_pwd"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            android:layout_weight="3"
            android:id="@+id/ed_crewPwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/between_6_12"
            android:textSize="17sp"
            android:textColorHint="@color/hint_text"
            android:inputType="textPassword"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/subline"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/btn_bg"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/build_crew"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        />
</LinearLayout>