<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingTop="25dp"
        >
        <ImageButton
            android:id="@+id/back_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@mipmap/icon_back"
            />
        <TextView
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="@string/perfect_data"
            android:gravity="center"
            android:textColor="@color/main_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textSize="22sp"
            android:textColor="@color/hint_text"
            android:layout_centerVertical="true"
            android:layout_above="@+id/ed_nikeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/nikename_or_username"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:id="@+id/ed_nikeName"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="60dp"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_height="50dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="1.3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:gravity="center"
            >
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/boy_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginRight="50dp"
                    android:src="@mipmap/boy_checked"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/boy_radio"
                    android:layout_alignRight="@+id/boy_radio"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/boy_radio"
                    android:textSize="20sp"
                    android:textColor="@color/main_text"
                    android:text="@string/sex_boy"
                    android:gravity="center"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/girl_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginRight="50dp"
                    android:src="@mipmap/girl_unchecked"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/girl_radio"
                    android:layout_alignRight="@+id/girl_radio"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/girl_radio"
                    android:textSize="20sp"
                    android:textColor="@color/main_text"
                    android:text="@string/sex_girl"
                    android:gravity="center"
                    />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/submint_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:background="@color/btn_bg"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="70dp"
            android:text="@string/submit"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>