<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/crewName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            />
        <TextView
            android:id="@+id/applyJoin"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_bg"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/apply_join"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/subline"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/directorLayout"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/director1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            />
        <TextView
            android:id="@+id/directorName"
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/main_text"
            android:textSize="16sp"
            android:gravity="center|left"
            android:layout_alignParentRight="true"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/productLayout"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/product_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            />
        <TextView
            android:id="@+id/productorName"
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/main_text"
            android:textSize="16sp"
            android:gravity="center|left"
            android:layout_alignParentRight="true"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/recipeLayout"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/recipeName"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            />
        <TextView
            android:id="@+id/recipeName"
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/main_text"
            android:textSize="16sp"
            android:gravity="center|left"
            android:layout_alignParentRight="true"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/madeData"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/main_text"
            android:gravity="center|left"
            />
        <TextView
            android:id="@+id/madeDate"
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/main_text"
            android:textSize="16sp"
            android:gravity="center|left"
            android:layout_alignParentRight="true"
            />
    </LinearLayout>

</LinearLayout>